<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="drucc.sittichok.heyheybread.ConfirmOrderActivity"
    android:background="@drawable/menubg1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LinButton"
        android:background="#96ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:layout_above="@+id/textView23">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive"
                android:id="@+id/textView18"
                android:textIsSelectable="false"
                android:textSize="@dimen/h1"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView30"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView19"
                    android:textSize="@dimen/h2"
                    android:layout_weight="1"
                    android:gravity="right" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView20"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView21"
                android:textSize="@dimen/h2"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView22"
                android:textSize="@dimen/h2"
                android:layout_marginLeft="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b1"
                    android:id="@+id/textView32"
                    android:textSize="@dimen/h3"
                    android:layout_weight="2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:id="@+id/textView31"
                    android:textSize="@dimen/h3"
                    android:layout_weight="9"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:id="@+id/textView34"
                    android:textSize="@dimen/h3"
                    android:layout_weight="3"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:id="@+id/textView33"
                    android:textSize="@dimen/h3"
                    android:layout_weight="5"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    android:id="@+id/textView36"
                    android:textSize="@dimen/h3"
                    android:layout_weight="4"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="257dp"
                android:id="@+id/listView2"
                android:padding="15dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView23"
            android:textSize="@dimen/h2"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive1"
            android:id="@+id/textView29"
            android:textSize="@dimen/h2"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="false" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinButton"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickMore"
            android:text="More..."
            android:id="@+id/button6"
            android:layout_weight="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFinish"
            android:text="Confirm Order"
            android:id="@+id/button7"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
